// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders no transactions if there are none and ready 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <div
      className="text-left soft-ends soft-half-sides"
    >
      <p>
        We didn't find any contributions associated with your account. If you would like to start giving, click 
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/give/now"
        >
          here
        </Link>
      </p>
      <p>
        <em>
          If you have any questions, please call our Finance Team at 864-965-9990 or
           
          <a
            href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
           and someone will be happy to assist you.
        </em>
      </p>
    </div>
    <TransactionList
      transactions={Array []}
    />
  </div>
  <div
    className="one-whole text-center"
  />
</div>
`;

exports[`Layout renders reloading if no transactions and not ready 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <div
      className="text-center soft"
    >
      <Spinner
        styles={
          Object {
            "height": "40px",
            "width": "40px",
          }
        }
      />
    </div>
    <TransactionList
      transactions={Array []}
    />
  </div>
  <div
    className="one-whole text-center"
  />
</div>
`;

exports[`Layout renders reloading version 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <div
      className="text-center soft"
    >
      <Spinner
        styles={
          Object {
            "height": "40px",
            "width": "40px",
          }
        }
      />
    </div>
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="one-whole text-center"
  />
</div>
`;

exports[`Layout renders transactions across years 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
            "person": Object {
              "firstName": "1",
              "lastName": "1",
              "nickname": "1",
              "photo": "1",
            },
          },
          Object {
            "date": "2013-12-12",
            "details": Array [
              Object {
                "account": "Other Test",
                "amount": 2,
              },
              Object {
                "account": "Third Test",
                "amount": 2,
              },
            ],
            "person": Object {
              "firstName": "1",
              "lastName": "1",
              "nickname": "1",
              "photo": "1",
            },
          },
        ]
      }
    />
  </div>
  <div
    className="one-whole text-center"
  >
    <mockConstructor />
  </div>
</div>
`;

exports[`Layout renders with negative transactions 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": -1,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "Other Test",
                "amount": 2,
              },
              Object {
                "account": "Third Test",
                "amount": 2,
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="one-whole text-center"
  >
    <mockConstructor />
  </div>
</div>
`;

exports[`Layout renders with print loading false and there are transactions 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": -1,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "Other Test",
                "amount": 2,
              },
              Object {
                "account": "Third Test",
                "amount": 2,
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="one-whole text-center"
  >
    <mockConstructor />
  </div>
</div>
`;

exports[`Layout renders with print loading true and there are transactions 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": -1,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "Other Test",
                "amount": 2,
              },
              Object {
                "account": "Third Test",
                "amount": 2,
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="one-whole text-center"
  >
    <mockConstructor />
  </div>
</div>
`;

exports[`Layout renders with props 1`] = `
<div>
  <Meta
    title="Giving History"
  />
  <Filter
    family={Array []}
    filterTransactions={[Function]}
  />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable"
  >
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="one-whole text-center"
  >
    <mockConstructor />
  </div>
</div>
`;

exports[`TransactionList doesn't render transaction with $0.00 amounts 1`] = `
<div>
  <div>
    <div>
      <div
        className="soft soft-half-left text-left"
      >
        <h5>
          2012
        </h5>
      </div>
      <Component
        person={
          Object {
            "firstName": "1",
            "lastName": "1",
            "nickname": "1",
            "photo": "1",
          }
        }
        transaction={
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 0,
              },
              Object {
                "account": "test",
                "amount": 1,
              },
            ],
            "person": Object {
              "firstName": "1",
              "lastName": "1",
              "nickname": "1",
              "photo": "1",
            },
          }
        }
        transactionDetail={
          Object {
            "account": "test",
            "amount": 1,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TransactionList renders transactions across years 1`] = `
<div>
  <div>
    <div>
      <div
        className="soft soft-half-left text-left"
      >
        <h5>
          2012
        </h5>
      </div>
      <Component
        person={
          Object {
            "firstName": "1",
            "lastName": "1",
            "nickname": "1",
            "photo": "1",
          }
        }
        transaction={
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 1,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
            "person": Object {
              "firstName": "1",
              "lastName": "1",
              "nickname": "1",
              "photo": "1",
            },
          }
        }
        transactionDetail={
          Object {
            "account": "test",
            "amount": 1,
          }
        }
      />
    </div>
    <Component
      person={
        Object {
          "firstName": "1",
          "lastName": "1",
          "nickname": "1",
          "photo": "1",
        }
      }
      transaction={
        Object {
          "date": "2012-12-12",
          "details": Array [
            Object {
              "account": "test",
              "amount": 1,
            },
            Object {
              "account": "test",
              "amount": 2,
            },
          ],
          "person": Object {
            "firstName": "1",
            "lastName": "1",
            "nickname": "1",
            "photo": "1",
          },
        }
      }
      transactionDetail={
        Object {
          "account": "test",
          "amount": 2,
        }
      }
    />
  </div>
  <div>
    <div>
      <div
        className="soft soft-half-left text-left"
      >
        <h5>
          2013
        </h5>
      </div>
      <Component
        person={
          Object {
            "firstName": "1",
            "lastName": "1",
            "nickname": "1",
            "photo": "1",
          }
        }
        transaction={
          Object {
            "date": "2013-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 3,
              },
              Object {
                "account": "test",
                "amount": 4,
              },
            ],
            "person": Object {
              "firstName": "1",
              "lastName": "1",
              "nickname": "1",
              "photo": "1",
            },
          }
        }
        transactionDetail={
          Object {
            "account": "test",
            "amount": 3,
          }
        }
      />
    </div>
    <Component
      person={
        Object {
          "firstName": "1",
          "lastName": "1",
          "nickname": "1",
          "photo": "1",
        }
      }
      transaction={
        Object {
          "date": "2013-12-12",
          "details": Array [
            Object {
              "account": "test",
              "amount": 3,
            },
            Object {
              "account": "test",
              "amount": 4,
            },
          ],
          "person": Object {
            "firstName": "1",
            "lastName": "1",
            "nickname": "1",
            "photo": "1",
          },
        }
      }
      transactionDetail={
        Object {
          "account": "test",
          "amount": 4,
        }
      }
    />
  </div>
</div>
`;

exports[`TransactionList renders with props 1`] = `
<div>
  <div>
    <div>
      <div
        className="soft soft-half-left text-left"
      >
        <h5>
          2012
        </h5>
      </div>
      <Component
        transaction={
          Object {
            "date": "2012-12-11",
            "details": Array [
              Object {
                "account": "test",
                "amount": 1,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          }
        }
        transactionDetail={
          Object {
            "account": "test",
            "amount": 1,
          }
        }
      />
    </div>
    <Component
      transaction={
        Object {
          "date": "2012-12-11",
          "details": Array [
            Object {
              "account": "test",
              "amount": 1,
            },
            Object {
              "account": "test",
              "amount": 2,
            },
          ],
        }
      }
      transactionDetail={
        Object {
          "account": "test",
          "amount": 2,
        }
      }
    />
  </div>
  <div>
    <Component
      transaction={
        Object {
          "date": "2012-12-12",
          "details": Array [
            Object {
              "account": "test",
              "amount": 3,
            },
            Object {
              "account": "test",
              "amount": 4,
            },
          ],
        }
      }
      transactionDetail={
        Object {
          "account": "test",
          "amount": 3,
        }
      }
    />
    <Component
      transaction={
        Object {
          "date": "2012-12-12",
          "details": Array [
            Object {
              "account": "test",
              "amount": 3,
            },
            Object {
              "account": "test",
              "amount": 4,
            },
          ],
        }
      }
      transactionDetail={
        Object {
          "account": "test",
          "amount": 4,
        }
      }
    />
  </div>
</div>
`;
